# Recipe-Book

./: .gitignore  README.md  compile_commands.json
docs/: Application Layout.mm  LICENSE  LICENSE.fr  README.md  cache.uxf  data.uxf  data_structures.uxf  db.uxf  display_box.uxf  ingredient_field.uxf  models.uxf  recipe_form.uxf  ui.uxf  ui_elements.uxf  ux.uxf  workflow.uxf
recipe-book/: CMakeLists.txt  README.md  abstractdbmanager.cpp  abstractdbmanager.h  applicationcleanup.cpp  applicationcleanup.h  database.h  database_visitor_fwd.h  datacache.cpp  datacache.h  ingredient.cpp  ingredient.h  ingredientfactory.cpp  ingredientfactory.h  ingredientlistdelegate.cpp  ingredientlistdelegate.h  ingredientlistmodel.cpp  ingredientlistmodel.h  ingredientrootview.cpp  ingredientrootview.h  ingredientrootview.ui  ingredientselectiondelegate.cpp  ingredientselectiondelegate.h  ingredientselectordialog.cpp  ingredientselectordialog.h  ingredientselectordialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  profile.cpp  profile.h  profilefactory.cpp  profilefactory.h  profilelistdelegate.cpp  profilelistdelegate.h  profilelistmodel.cpp  profilelistmodel.h  profilerootview.cpp  (+33 more)
recipe-book/data/: dataprovider.cpp  dataprovider.h  objecttypes.h
recipe-book/data/cache/: abstractcache.h  genericobjectcachess.h  ingredientcache.cpp  ingredientcache.h  memorycache.cpp  memorycache.h  profilecache.cpp  profilecache.h  recipecache.cpp  recipecache.h  storableobjectcache.cpp
recipe-book/data/db/: abstractdbhandler.h  databasevisitor.h  sqlitedbhandler.cpp  sqlitedbhandler.h
recipe-book/db/: datacache.cpp  datacache.h  genericobjectcache.cpp  genericobjectcache.h  recipeingredientcache.cpp  recipeingredientcache.h  storableobjectcache.h
recipe-book/models/: CMakeLists.txt  GenericFactorySS.h  factorymanager.cpp  factorymanager.h  genericfactory.h  genericfactoryss.h  ingredient.cpp  ingredient.h  ingredient_factory.cpp  ingredient_factory.h  ingredientfactory.cpp  ingredientfactory.h  profile.cpp  profile.h  profilefactory.cpp  profilefactory.h  qingredient.cpp  qingredient.h  qprofile.cpp  qprofile.h  qrecipe.cpp  qrecipe.h  qrecipeingredient.cpp  qrecipeingredient.h  qt_ingredient_wrapper.cpp  qt_ingredient_wrapper.h  qt_recipe_wrapper.cpp  qt_recipe_wrapper.h  qt_user_wrapper.cpp  qt_user_wrapper.h  recipe.cpp  recipe.h  recipe_ingredient.cpp  recipe_ingredient.h  recipefactory.cpp  recipefactory.h  recipeingredient.cpp  recipeingredient.h  recipeingredientfactory.cpp  recipeingredientfactory.h  (+6 more)
recipe-book/resources/: help_en.txt  license_en.txt  navigation_en.txt
recipe-book/translation/: CMakeLists.txt
recipe-book/ui/: CMakeLists.txt  abstractform.h  abstractview.h  carousel_form.cpp  carousel_form.h  display_box.cpp  display_box.h  displayingredientview.cpp  displayingredientview.h  displayingredientview.ui  form_field.cpp  form_field.h  generic_object_display_box.cpp  generic_object_display_box.h  generic_root_view.h  genericlistmodel.cpp  genericlistmodel.h  ingredient_carousel_form.cpp  ingredient_carousel_form.h  ingredient_display_box.cpp  ingredient_display_box.h  ingredient_root_view.cpp  ingredient_root_view.h  ingredientform.cpp  ingredientform.h  ingredientform.ui  ingredientlistdelegate.cpp  ingredientlistdelegate.h  ingredientlistmodel.cpp  ingredientlistmodel.h  ingredientselectordelegate.cpp  ingredientselectordelegate.h  ingredientview.cpp  ingredientview.h  ingredientview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  profileform.cpp  profileform.h  (+39 more)
